dark mode less style fixes

--- a/less/dark.less
+++ b/less/dark.less
@@ -77,7 +77,7 @@ body.dark {
 .btn-exodo.dark {
     background-color: @exodo-button-darkmode;
     color: #e2e2e2;
-    span {
+    .exright {
         background-color: @exodo-primary-darkmode;
     }
 }
@@ -124,6 +124,20 @@ body.dark {
             }
      }
 	 
+
+.ribbon-green.dark {
+	   background-color: @exodo-primary-darkmode;
+	   background-image: none !important; 
+	  color: #fff !important;
+	   a {
+	 	color: #fff;
+	 	}
+	   a:hover{
+	 	color: #fff;
+	   }
+	 }
+
+
 
 .category .category-topics{
      .threadlisthead.dark {
@@ -281,7 +295,7 @@ body.dark {
         background: none repeat scroll 0% 0% @exodo-button-darkmode;
         border-top: 1px solid #373737;
         .pull-left, .pull-right {
-            &.hidden-xs {
+           
                 .btn-group {
                     border-right: 1px solid @exodo-border-color;
                     .btn-link {
@@ -293,8 +307,6 @@ body.dark {
                     }
                     
                 }
-                
-            }
         }
     }
 }
@@ -398,4 +410,12 @@ span.username-field-mini {
 .composer.dark .composer-container .row .btn-toolbar .btn-group .btn-primary:hover {
         background-color: @exodo-secondary-darkmode;
 
+}
+
+.color-primario.dark {
+	color: @exodo-primary-darkmode;
+}
+
+.post-bar-well {
+	background-color: @exodo-button-darkmode;
 }
